[package]
name = "sp"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6", features = ["behavior-version-latest"] }
#aws-sdk-dynamodb = "1.10.0"
aws-sdk-dynamodb = { version = "1.71.0", features = ["behavior-version-latest"] }
aws-types = "1.3.6"
# tokio is a aws dependency
tokio = { version = "1.44.0", features = ["full"] }
mysql_async = "0.35.*"
aws-smithy-runtime-api = "1.7.4"
trait-variant = "0.1.2"
[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.cache]
version = "0.1.0"
path = "cache"
